@@ -5,6 +5,8 @@
 	* src/SDCCopt.c,
 	  support/regression/tests/bug-3780.c:
 	  Fix bug #3780.
+	* src/SDCCsystem.c:
+	  Fix bug #3616 via patch #482 by Janko Stamenović.
 
 2024-11-04 Philipp Klaus Krause <philipp@colecovision.eu>
 
